fix: complete tag coloring when in dark mode

--- a/frontend/src/components/core/Tags/SubmissionStatusTag/index.scss
+++ b/frontend/src/components/core/Tags/SubmissionStatusTag/index.scss
@@ -43,4 +43,7 @@
   .submission-status-tag--completed {
     color: #ffffff;
   }
+  .submission-status-tag--completed {
+    background-color: #006000;
+  }
 }
